# aoc-2023

./: CMakeLists.txt  check.inl  day_1.cc  day_10.cc  day_10.hh  day_11.cc  day_11.hh  day_12.cc  day_12.hh  day_2.cc  day_2.hh  day_2_exe.cc  day_3.cc  day_3.hh  day_4.cc  day_4.hh  day_5.cc  day_5.hh  day_6.cc  day_6.hh  day_7.cc  day_7.hh  day_8.cc  day_8.hh  day_9.cc  day_9.hh  get_or.inl  lcm.hh  lcm.inl  utils.cc  utils.hh
res/: utils_lines.txt
test/: CMakeLists.txt  day_10_test.cc  day_11_test.cc  day_12_test.cc  day_2_test.cc  day_3_test.cc  day_4_test.cc  day_5_test.cc  day_6_test.cc  day_7_test.cc  day_8_test.cc  day_9_test.cc  utils_test.cc
